Kubernetes/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-deploy
  namespace: evaluation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service # < - deploy ira gerenciar container com essa label Linhas 20
  template:
    metadata:
      labels:
        app: evaluation-service # < - tag do container
    spec:
      containers:
      - name: evaluation-service
        image: 123945314948.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:7523c1a
        ports:
        - containerPort: 8004 # <- apenas indica na documentação
        resources:
          requests:
            cpu: "20m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 10
          periodSeconds: 30
