Kubernetes/evaluation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation-service
spec:
  selector:
    app: evaluation-service
  type: ClusterIP
  ports:
  - port: 8004
    targetPort: 8004
